# voice-translate

./: .env.example  .gitignore  Dockerfile  README.md  db.py  dm-translation-hellotalk.md  logger.py  main.py  pyproject.toml  requirements.deploy.txt  server.py  test.py  text_translator.py
docs/: frontend-react-pwa-migration-plan.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: audio.ts  auth.ts  boot.ts  demo.ts  dm.ts  globals.d.ts  i18n.ts  langbar.ts  languages.ts  main.ts  nav.ts  onboarding.ts  panels.ts  protocol.ts  push.ts  recordings.ts  room.ts  solo.ts  state.ts  styles.css  ui.ts  voiceNote.ts  ws.ts
scripts/: gen_architecture.py
static/: admin.html  index.html  manifest.webmanifest  sw.js
static/app/: index.html
static/assets/: index-8GH72iwQ.js  index-AI04BItK.css  index-BKvRN1yK.js  index-BRPiV8AO.css  index-BVo6sl2h.js  index-B_82mx9n.js  index-BjQQy48N.css  index-BnanYkx2.js  index-BuUbrQYY.js  index-BxeVbhB6.js  index-C9VVj2MN.css  index-CAxhQT56.css  index-CBdaz4f4.js  index-CEbgt7JC.js  index-CQZl-8FH.css  index-CT4WFZjj.css  index-CWrndiUJ.css  index-CZLJLhQv.js  index-CbqBVXo_.css  index-CoxTcx0l.css  index-Cu860L4-.css  index-D2AzjETI.css  index-D4g9nUAF.js  index-D9ZjxS_5.css  index-DCUF0NN1.css  index-DTC4xCa0.js  index-DUs8i0-m.js  index-Dl41Wi9r.css  index-Do_vfRa_.js  index-Ez_gfb9g.css  index-FEXDQILd.js  index-HcTvc_BG.css  index-Id_6Ruwr.css  index-LTBCtyei.js  (+1 more)
tests/: test_db_dm_translation.py  test_dm_db.py  test_push_db.py  test_text_translator.py
(+5 files in other folders)
