[project]
name = "qwen3-asr-flash-realtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pyaudio>=0.2.14",
    "uvicorn>=0.46.0",
    "websocket-client>=1.9.0",
    "websockets>=16.0",
]
