[project]
name = "voice-translate"
version = "0.1.0"
description = "Real-time voice translation with OpenAI gpt-realtime-translate"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websocket-client>=1.8.0",
    "python-dotenv>=1.0.0",
    "pywebpush>=2.0.3",
    "litellm>=1.40.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
